// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with custom props and match snapshot 1`] = `
"{
  "output": {
    "Ec2InstanceId": {
      "value": "mock-instance-id"
    },
    "LoggingBucketName": {
      "value": "mock-logging-bucket-name"
    },
    "VpcId": {
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Environment": "Production",
              "Owner": "DevOps",
              "Project": "TAP"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with default props and match snapshot 1`] = `
"{
  "output": {
    "Ec2InstanceId": {
      "value": "mock-instance-id"
    },
    "LoggingBucketName": {
      "value": "mock-logging-bucket-name"
    },
    "VpcId": {
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Environment": "Production"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestDefaultStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
